[package]
name = "l1x-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
borsh = { version = "0.9", features = ["const-generics"] }
l1x-sdk = { path = "../l1x-virtual-machine/l1x-sdk", package = "l1x-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"